fix alpha links floating off on mobile

--- a/frontend/sass/site_styles_with_bulma.scss
+++ b/frontend/sass/site_styles_with_bulma.scss
@@ -101,6 +101,9 @@ $navbar-dropdown-arrow: $accentcolour;
 $navbar-height: 40px;
 $navbar-padding-vertical: 0;
 
+$nav-brand-height-mobile: 64px;
+$header-bar-height: 40px;
+
 $input-arrow: $accentcolour;
 
 $footer-background-color: $lightpink;
@@ -113,7 +116,7 @@ $footer-background-color: $lightpink;
 #header-bar {
   background: $yellow;
   z-index: 100;
-  height: 40px;
+  height: $header-bar-height;
 }
 #header-bar .navbar-item {
   padding: 0 0.75rem;
@@ -221,6 +224,10 @@ $footer-background-color: $lightpink;
   }
 }
 
+#mobile-title img {
+  max-height: 3rem;
+}
+
 .cat-tag-filter {
   & > label {
     text-wrap: nowrap;
@@ -228,6 +235,12 @@ $footer-background-color: $lightpink;
   & > .select {
     min-width: 0;
   }
+}
+
+#alpha-links {
+  top: $nav-brand-height-mobile;
+  padding: 0.5rem;
+  background: white;
 }
 
 /* touch devices */
@@ -248,7 +261,7 @@ $footer-background-color: $lightpink;
     overflow-y: unset;
   }
   #navbar {
-    top: 40px;
+    top: $header-bar-height;
   }
 
   #site-warning-wrapper {
@@ -276,6 +289,10 @@ $footer-background-color: $lightpink;
     & > .navbar-dropdown > .navbar-item:hover {
       background: $yellow;
     }
+  }
+
+  #alpha-links {
+    top: $header-bar-height + $navbar-height;
   }
 }
 
@@ -318,12 +335,6 @@ h1.site-title {
   font-size: 18px !important;
 }
 
-#alpha-links {
-  top: 80px;
-  padding: 0.5rem;
-  background: white;
-}
-
 .sticky {
   position: sticky;
   top: 0;
@@ -364,10 +375,6 @@ a.tag-expander {
 
 .content iframe {
   border-radius: 10px;
-}
-
-#mobile-title img {
-  max-height: 3rem;
 }
 
 #adv-search.collapsed {
@@ -478,7 +485,7 @@ a.tag-expander {
 }
 
 .navbar-brand {
-  min-height: 64px;
+  height: $nav-brand-height-mobile;
   &:has(.title-search-input:focus) #mobile-title {
     display: none;
   }
